--- a/home.html
+++ b/home.html
@@ -121,7 +121,7 @@
                     <a href="#" class="btn-app"><img src="resources/img/download-app-android.png" alt="Play Store Button"></a>
                 </div>
                 <div class="col span-1-of-2 steps-box">
-                    <img src="resources/img/app-iPhone.png" alt="Omnifood app on iPhone" class="app-screen js--wp-2">
+                    <img src="resources/img/app-iPhone.png" alt="" class="app-screen js--wp-2">
                 </div>
                 
             </div>
@@ -131,44 +131,44 @@
             <ul class="meals-showcase clearfix">
                 <li>
                     <figure class="meal-photo">
-                        <img src="resources/img/1.jpg" alt="Korean bibimbap with egg and vegetables">
+                        <img src="resources/img/1.jpg" alt="">
                     </figure>
                 </li>
                 <li>
                     <figure class="meal-photo">
-                        <img src="resources/img/2.jpg" alt="Simple italian pizza with cherry tomatoes">
+                        <img src="resources/img/2.jpg" alt="">
                     </figure>
                 </li>
                 <li>
                     <figure class="meal-photo">
-                        <img src="resources/img/3.jpg" alt="Chicken breast steak with vegetables">
+                        <img src="resources/img/3.jpg" alt="">
                     </figure>
                 </li>
                 <li>
                     <figure class="meal-photo">
-                        <img src="resources/img/4.jpg" alt="Autumn pumpkin soup">
+                        <img src="resources/img/4.jpg" alt="">
                     </figure>
                 </li>
             </ul>
             <ul class="meals-showcase clearfix">
                 <li>
                     <figure class="meal-photo">
-                        <img src="resources/img/5.jpg" alt="Paleo beef steak with vegetables">
+                        <img src="resources/img/5.jpg" alt="">
                     </figure>
                 </li>
                 <li>
                     <figure class="meal-photo">
-                        <img src="resources/img/6.jpg" alt="Healthy baguette with egg and vegetables">
+                        <img src="resources/img/6.jpg" alt="">
                     </figure>
                 </li>
                 <li>
                     <figure class="meal-photo">
-                        <img src="resources/img/7.jpg" alt="Burger with cheddar and bacon">
+                        <img src="resources/img/7.jpg" alt="">
                     </figure>
                 </li>
                 <li>
                     <figure class="meal-photo">
-                        <img src="resources/img/8.jpg" alt="Granola with cherries and strawberries">
+                        <img src="resources/img/8.jpg" alt="">
                     </figure>
                 </li>
             </ul>
