--- a/home.html
+++ b/home.html
@@ -44,10 +44,10 @@
                 <div class="row">
                      <i class="ion-xbox icon-big"></i>
                     <ul class="main-nav js--main-nav">
-                        <li><a href="#features">LINK 1</a></li>
-                        <li><a href="#works">LINK 2</a></li>
-                        <li><a href="#cities">LINK 3</a></li>
-                        <li><a href="#plans">LINK 4</a></li>
+                        <li><a href="#features">What we do</a></li>
+                        <li><a href="#works">Approach</a></li>
+                        <li><a href="#cities">Offices</a></li>
+                        <li><a href="#plans">Signup</a></li>
                     </ul>
                     <a class="mobile-nav-icon js--nav-icon"><i class="ion-navicon-round"></i></a>
                 </div>
